# PagePilot

./: .gitignore  README.md  crawler_crawl4ai.py  page_pilot_ui.py  page_pilot_v1.ui  prompts.py  pyproject.toml  requirements.txt  run.py  run.sh  run_ui.py  setup_web.py  ui_controller.py  ui_model.py  ui_view.py  utils.py
data/: run.jsonl  tasks_dataset.jsonl  tasks_dataset_combine.jsonl  tasks_dataset_expansion.jsonl
data/multimodal_mind2web/: mind2web_preprocess.py  mind2web_test0.jsonl
evaluation/: auto_eval.py  auto_eval_dump.py  auto_eval_origin.py  eval_analyse.py
results/demo/20250218_13_31_19/taskPTTNews--E2/: action_trajectory.json  interact_messages.json  observer_help.json
results/demo/20250218_13_31_19/taskPTTNews--E2/web_assistant/: web_assistant1.md  web_assistant10.md  web_assistant11.md  web_assistant2.md  web_assistant3.md  web_assistant4.md  web_assistant5.md  web_assistant6.md  web_assistant7.md  web_assistant8.md  web_assistant9.md
results/demo/20250218_13_31_19/taskPTTNews--E2/web_dump/: web_dump1.md  web_dump10.md  web_dump11.md  web_dump3.md  web_dump5.md  web_dump6.md  web_dump7.md  web_dump8.md  web_dump9.md
results/demo/20250218_15_25_00/taskNCU--1/: action_trajectory.json  interact_messages.json  observer_help.json
results/demo/20250218_15_25_00/taskNCU--1/web_assistant/: web_assistant1.md  web_assistant10.md  web_assistant11.md  web_assistant2.md  web_assistant3.md  web_assistant4.md  web_assistant5.md  web_assistant6.md  web_assistant7.md  web_assistant8.md  web_assistant9.md
train/: generate_data.py
(+11 files in other folders)
