[tool.poetry]
name = "webassistant"
version = "0.1.0"
description = ""
authors = ["Toby <fdsf53451001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "10.4.0"
openai = "1.61.0"
crawl4ai = "0.3.731"
pyarrow = "^18.1.0"
pandas = "^2.2.3"
pyqt6 = "^6.8.0"
selenium = "^4.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
